Added sbom branch

--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -8,7 +8,7 @@ name: Generate SBOM
 on:
   workflow_dispatch: {}
   push:
-    branches: ['main']
+    branches: ['main', 'sbom']
     paths:
       - 'pyproject.toml'
       - 'uv.lock'
