Remove evergreen scripts not required anymore & adjusted gh sbom action for more debugs

--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -1,7 +1,6 @@
 name: Generate SBOM
 
-# This workflow uses cdxgen and publishes
-# an sbom.json artifact enriched with supplier information.
+# This workflow uses cdxgen and publishes an sbom.json artifact.
 # It runs on manual trigger or when package files change on main branch,
 # and creates a PR with the updated SBOM.
 
@@ -64,12 +63,9 @@ jobs:
           source sbom-venv/bin/activate
           cdxgen -t python --python-path sbom-venv/bin/python -o sbom.json --json-pretty
         shell: bash
-
-      - name: Enrich SBOM with supplier info
-        run: |
-            source sbom-venv/bin/activate
-            python tools/enrich_suppliers.py --input sbom.json
-        shell: bash
+        env:
+          CDXGEN_DEBUG_MODE: debug
+          FETCH_LICENSE: true
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
